--- a/src/skeleton.tex
+++ b/src/skeleton.tex
@@ -43,6 +43,7 @@
 \newcommand{\lm}{\lim\limits}
 \newcommand{\lminf}{\lm_{n \to +\infty}}
 \newcommand{\ngl}[2]{\negl_{#1}\!\!\!(#2)}
+\newcommand{\prive}{\backslash}
 
 % Abreviation textuelle
 \newcommand{\ssi}{si et seulement si\xspace}
@@ -111,6 +112,8 @@
 \DeclareMathOperator{\Card}{\mathrm{Card}}
 \DeclareMathOperator{\M}{\mathcal{M}}
 \DeclareMathOperator{\com}{\mathrm{com}}
+\DeclareMathOperator{\diviseurs}{\mathrm{Div}}
+\newcommand{\binaryRelation}{\mathbin{\mathcal{R}}}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 
